--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,7 +6,7 @@
         <div class="col-lg-9 main-left">
             <!--标题-->
             <div class="title">
-                <a href="#" class="pull-left discover">
+                <a href="javascript:;" class="pull-left discover">
                     <span class="fa fa-credit-card"></span>
                     发起
                 </a>
@@ -61,8 +61,3 @@
     </div>
 </main>
 
-<script>
-    $(function () {
-
-    })
-</script>
