--- a/views/indexTemplate.ejs
+++ b/views/indexTemplate.ejs
@@ -62,7 +62,7 @@
         </div>
         <% if(user) { %>
             <!--右侧头像-->
-            <a class="my pull-right" href="#">
+            <a class="my pull-right" href="/user/<%= user.name %>">
                 <img src="<%= user.avatar %>" alt="">
             </a>
             <!--发布文章按钮-->
