--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -77,9 +77,6 @@ main .container {
     padding: 5px 0;
     border-bottom: 1px solid #eee;
 }
-.body li:last-child {
-    border-bottom: none;
-}
 .body li a {
     width: 40px;
     height: 40px;
@@ -182,4 +179,13 @@ main .container {
 .hot div p {
     font-size: 12px;
     color: #999;
+}
+.btn-group {
+    margin: 20px 0 10px;
+}
+.btn:active, .btn.active {
+    cursor: default;
+    background: #499ef3;
+    border: 1px solid #499ef3;
+    color: #fff;
 }
