--- a/views/public/reply-list.ejs
+++ b/views/public/reply-list.ejs
@@ -8,25 +8,25 @@
         <ul id="reply-all-list">
             <!--一级回复部分-->
             <% replies.forEach(function (reply, index) { %>
-            <li id="<%= reply._id %>" class="comment-body-list clearfix">
-                <a class="head-img pull-left" href="#"><img src="<%= reply.author.avatar %>" alt=""></a>
+            <li id="<%= reply._id %>" replyId="<%= reply.author._id %>" userId="<%= user %>" class="comment-body-list clearfix">
+                <a class="head-img pull-left" href="/user/<%= reply.author.name %>"><img src="<%= reply.author.avatar %>" alt=""></a>
                 <div class="col-lg-11 comment-list-content">
-                    <a class="comment-author" href="#"><%= reply.author.name %></a></span>
+                    <a class="comment-author" href="/user/<%= reply.author.name %>"><%= reply.author.name %></a></span>
                     <p><%- markdown(reply.content) %></p>
                     <div class="meta">
-                        <a href="#">
+                        <a href="javascript:;" class="one-like">
                             <span class="fa fa-thumbs-up"></span>
-                            0
+                            <%= reply.likes.length %>
                         </a>
-                        &nbsp;
-                        <a href="#">
+                        &nbsp
+                        <a href="javascript:;" class="one-unlike">
                             <span class="fa fa-thumbs-down"></span>
-                            0
+                            <%= reply.unlikes.length %>
                         </a>
                         &#x3000;
                         <a href="javascript:;" class="reply">
                             <span class="fa fa-commenting"></span>
-                            1 条回复
+                            <%= reply.comment_num %> 条回复
                         </a>
                         <span class="pull-right"><%= reply.create_time_ago() %></span>
                     </div>
@@ -39,5 +39,9 @@
 </div>
 <% } %>
 <% if(question.comment_num > 5) { %>
+<% if(user) { %>
 <div id="showReply" target="<%= question._id %>">查看全部</div>
+<% } else { %>
+<div class="tipLogin" target="<%= question._id %>">请先 <a href="/login">登录</a> 或 <a href="/register">注册</a></div>
+<% } %>
 <% } %>
