--- a/views/reply-list-all.ejs
+++ b/views/reply-list-all.ejs
@@ -1,23 +1,23 @@
 <% replies.forEach(function (reply, index) { %>
 <li id="<%= reply._id %>" class="comment-body-list clearfix">
-    <a class="head-img pull-left" href="#"><img src="<%= reply.author.avatar %>" alt=""></a>
+    <a class="head-img pull-left" href="/user/<%= reply.author.name %>"><img src="<%= reply.author.avatar %>" alt=""></a>
     <div class="col-lg-11 comment-list-content">
-        <a class="comment-author" href="#"><%= reply.author.name %></a></span>
+        <a class="comment-author" href="/user/<%= reply.author.name %>"><%= reply.author.name %></a></span>
         <p><%- markdown(reply.content) %></p>
         <div class="meta">
-            <a href="#">
+            <a href="javascript:;" class="one-like">
                 <span class="fa fa-thumbs-up"></span>
-                0
+                <%= reply.likes.length %>
             </a>
             &nbsp;
-            <a href="#">
+            <a href="javascript:;" class="one-unlike">
                 <span class="fa fa-thumbs-down"></span>
                 0
             </a>
             &#x3000;
             <a href="javascript:;" class="reply">
                 <span class="fa fa-commenting"></span>
-                1 条回复
+                <%= reply.comment_num %> 条回复
             </a>
             <span class="pull-right"><%= reply.create_time_ago() %></span>
         </div>
