--- a/views/users.ejs
+++ b/views/users.ejs
@@ -5,120 +5,23 @@
         <div class="col-lg-9 main-left">
             <!--标题-->
             <div class="title">
-                <a href="#" class="pull-left discover">
+                <a href="javascript:;" class="pull-left discover">
                     <span class="fa fa-user-circle-o"></span>&nbsp;
-                    用户列表
+                    用户排名
                 </a>
             </div>
             <!--用户列表-->
             <div class="body clearfix">
-                <ul>
-                    <li>
-                        <span class="fa fa-bookmark pull-left head-icon"></span>
-                        <a class="pull-left" href="#"><img src="/images/avatar-mid-img.png" alt=""></a>
-                        <div class="list-text">
-                            <h4>
-                                <a href="/question/:id">苏威晴</a>
-                            </h4>
-                            <div class="meta">
-                                <a href="#">
-                                    <span class="fa fa-bar-chart-o"></span>
-                                    积分<b>115</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-thumbs-o-up"></span>
-                                    点赞<b>110</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-heart-o"></span>
-                                    感谢<b>50</b>
-                                </a>
-                            </div>
-                            <p>个性签名: <span>这家伙很懒，什么都没有留下...</span></p>
-                            <span class="users-follow-btn"><a href="#">关注&nbsp;&nbsp;|&nbsp;&nbsp;<span class="follow-num">22</span></a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="fa fa-bookmark pull-left head-icon"></span>
-                        <a class="pull-left" href="#"><img src="/images/avatar-mid-img.png" alt=""></a>
-                        <div class="list-text">
-                            <h4>
-                                <a href="/question/:id">苏威晴</a>
-                            </h4>
-                            <div class="meta">
-                                <a href="#">
-                                    <span class="fa fa-bar-chart-o"></span>
-                                    积分<b>115</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-thumbs-o-up"></span>
-                                    点赞<b>110</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-heart-o"></span>
-                                    感谢<b>50</b>
-                                </a>
-                            </div>
-                            <p>个性签名: <span>这家伙很懒，什么都没有留下...</span></p>
-                            <span class="users-follow-btn"><a href="#">关注&nbsp;&nbsp;|&nbsp;&nbsp;<span class="follow-num">22</span></a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="fa fa-bookmark pull-left head-icon"></span>
-                        <a class="pull-left" href="#"><img src="/images/avatar-mid-img.png" alt=""></a>
-                        <div class="list-text">
-                            <h4>
-                                <a href="/question/:id">苏威晴</a>
-                            </h4>
-                            <div class="meta">
-                                <a href="#">
-                                    <span class="fa fa-bar-chart-o"></span>
-                                    积分<b>115</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-thumbs-o-up"></span>
-                                    点赞<b>110</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-heart-o"></span>
-                                    感谢<b>50</b>
-                                </a>
-                            </div>
-                            <p>个性签名: <span>这家伙很懒，什么都没有留下...</span></p>
-                            <span class="users-follow-btn"><a href="#">关注&nbsp;&nbsp;|&nbsp;&nbsp;<span class="follow-num">22</span></a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="fa fa-bookmark pull-left head-icon"></span>
-                        <a class="pull-left" href="#"><img src="/images/avatar-mid-img.png" alt=""></a>
-                        <div class="list-text">
-                            <h4>
-                                <a href="/question/:id">苏威晴</a>
-                            </h4>
-                            <div class="meta">
-                                <a href="#">
-                                    <span class="fa fa-bar-chart-o"></span>
-                                    积分<b>115</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-thumbs-o-up"></span>
-                                    点赞<b>110</b>
-                                </a>
-                                <a href="#">
-                                    <span class="fa fa-heart-o"></span>
-                                    感谢<b>50</b>
-                                </a>
-                            </div>
-                            <p>个性签名: <span>这家伙很懒，什么都没有留下...</span></p>
-                            <span class="users-follow-btn"><a href="#">关注&nbsp;&nbsp;|&nbsp;&nbsp;<span class="follow-num">22</span></a></span>
-                        </div>
-                    </li>
+                <ul class="users-body">
+                    <% include public/users-page %>
                 </ul>
                 <!--分页-->
                 <div class="btn-group pull-right">
-                    <button type="button" class="btn btn-default checked">1</button>
-                    <button type="button" class="btn btn-default">2</button>
-                    <button type="button" class="btn btn-default">3</button>
+                    <% if(userNum.length > 5) { %>
+                    <% for(var i = 1; i <= Math.ceil(userNum.length / 5); i++) { %>
+                    <button type="button" class="users-btn btn btn-default"><%= i %></button>
+                    <% } %>
+                    <% } %>
                 </div>
             </div>
         </div>
@@ -127,5 +30,9 @@
         </div>
     </div>
 </main>
-
+<script>
+    $(function () {
+        $('.users-btn:first-of-type').addClass('active')
+    })
+</script>
 
